[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scenes/Sc01.gd" type="Script" id=1]
[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Trees/Tree01.tscn" type="PackedScene" id=3]
[ext_resource path="res://Enemies/Rabbit.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Trees/Tree04.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/Trees/Tree02.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/Trees/Tree03.tscn" type="PackedScene" id=8]

[node name="Sc01" type="YSort"]
position = Vector2( -209, -127 )
script = ExtResource( 1 )

[node name="Enemies" type="YSort" parent="."]

[node name="Rabbit" parent="Enemies" instance=ExtResource( 5 )]
position = Vector2( 26, 1 )

[node name="Shots" type="YSort" parent="."]

[node name="Trees" type="YSort" parent="."]

[node name="Tree01" parent="Trees" instance=ExtResource( 3 )]
position = Vector2( 134, -13 )

[node name="Tree05" parent="Trees" instance=ExtResource( 3 )]
position = Vector2( 105, -53 )

[node name="Tree06" parent="Trees" instance=ExtResource( 3 )]
position = Vector2( 36, -76 )

[node name="Tree02" parent="Trees" instance=ExtResource( 7 )]
position = Vector2( -129, -13 )

[node name="Tree03" parent="Trees" instance=ExtResource( 7 )]
position = Vector2( -93, -60 )

[node name="Tree04" parent="Trees" instance=ExtResource( 7 )]
position = Vector2( -32, -78 )

[node name="Tree07" parent="Trees" instance=ExtResource( 8 )]
position = Vector2( -128, 35 )

[node name="Tree09" parent="Trees" instance=ExtResource( 8 )]
position = Vector2( -89, 74 )

[node name="Tree10" parent="Trees" instance=ExtResource( 8 )]
position = Vector2( -36, 85 )

[node name="Tree08" parent="Trees" instance=ExtResource( 6 )]
position = Vector2( 130, 29 )

[node name="Tree11" parent="Trees" instance=ExtResource( 6 )]
position = Vector2( 93, 67 )

[node name="Tree12" parent="Trees" instance=ExtResource( 6 )]
position = Vector2( 33, 83 )

[node name="Player" parent="." instance=ExtResource( 2 )]
